--- a/.gitignore
+++ b/.gitignore
@@ -189,4 +189,4 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-imdb-datasets/ # Ignore the imdb-datasets folder
+imdb-datasets/large # Ignore the imdb-datasets folder
